# alita-linux

./: LICENSE  README.md  README.zh.md  pyproject.toml
alita/: agent.py  exec.py  llm.py  main.py
